# singledispatch-json

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  .yapfignore  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.rst  TODO  __pkginfo__.py  formate.toml  git_helper.yml  lint_roller.sh  make_conda_recipe.py  pyproject.toml  repo_helper.yml  requirements.txt  sd_ujson.py  sdjson.py  setup.cfg  setup.py  tox.ini
.ci/: actions_deploy_conda.sh  copy_pypi_2_github.py  travis_build_conda.sh  travis_deploy_conda.sh
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Building.rst  Source.rst  conf.py  contributing.rst  docs.rst  index.rst  license.rst  requirements.txt
sdjson/: __init__.py  __init__.pyi  core.py  core.pyi
tests/: conftest.py  requirements.txt  test_custom_class.py  test_custom_encoders.py  test_load.py  test_multiple_files.py  test_overloading.py  test_protocols.py  test_unregister.py
tests/stdlib_tests/: test_decode.py  test_default.py  test_dump.py  test_encode_basestring_ascii.py  test_enum.py  test_fail.py  test_float.py  test_indent.py  test_passes.py  test_recursion.py  test_scanstring.py  test_separators.py  test_speedups.py  test_unicode.py
tests/test_overloading_/: test_overloading.txt
ujson_tests/: test_unregister.py
ujson_tests/stdlib_tests/: test_default.py  test_dump.py  test_unicode.py
