[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "sdjson"
version = "0.3.0"
description = "Custom JSON Encoder for Python utilising functools.singledispatch to support custom encoders for both Python's built-in classes and user-created classes, without as much legwork."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/singledispatch-json"
"Issue Tracker" = "https://github.com/domdfcoding/singledispatch-json/issues"
"Source Code" = "https://github.com/domdfcoding/singledispatch-json"
Documentation = "https://singledispatch-json.readthedocs.io/en/latest"
