[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "sdjson"
version = "0.3.0"
description = "Custom JSON Encoder for Python utilising functools.singledispatch to support custom encoders for both Python's built-in classes and user-created classes, without as much legwork."
readme = "README.rst"
keywords = [ "json", "singledispatch", "serialize",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/singledispatch-json"
"Issue Tracker" = "https://github.com/domdfcoding/singledispatch-json/issues"
"Source Code" = "https://github.com/domdfcoding/singledispatch-json"
Documentation = "https://singledispatch-json.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "LGPL-3.0-or-later"
